# Automan-hunter

./: README.md
Workspace/: README.md
Workspace/catkin_ws/: frames.gv
Workspace/catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
Workspace/catkin_ws/devel/include/global_planner/: GlobalPlannerConfig.h
Workspace/catkin_ws/devel/include/hunter_local_planner/: FeedbackMsg.h  TebLocalPlannerReconfigureConfig.h  TrajectoryMsg.h  TrajectoryPointMsg.h
Workspace/catkin_ws/devel/include/hunter_move_base/: MoveBaseConfig.h
Workspace/catkin_ws/devel/include/hunter_msgs/: HunterStatus.h
Workspace/catkin_ws/devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
Workspace/catkin_ws/devel/lib/cartographer_ros/: cartographer_dev_pbstream_trajectories_to_rosbag  cartographer_dev_rosbag_publisher  cartographer_dev_trajectory_comparison  cartographer_pbstream_map_publisher  cartographer_pbstream_to_ros_map  cartographer_rosbag_validate
Workspace/catkin_ws/devel/lib/darknet_ros/: darknet_ros
Workspace/catkin_ws/devel/lib/global_planner/: planner
Workspace/catkin_ws/devel/lib/hunter_base/: hunter_base_node  hunter_base_sim_node  hunter_status_node
Workspace/catkin_ws/devel/lib/hunter_local_planner/: test_optim_node
Workspace/catkin_ws/devel/lib/hunter_move_base/: hunter_move_base
Workspace/catkin_ws/devel/lib/hunter_navigation/: hunter_pcfilter_node
Workspace/catkin_ws/devel/lib/hunter_webots_sim/: hunter_webots_node
Workspace/catkin_ws/devel/lib/move_base/: move_base
Workspace/catkin_ws/devel/lib/pkgconfig/: cartographer_ros.pc  cartographer_ros_msgs.pc  cartographer_rviz.pc  darknet_ros.pc  darknet_ros_msgs.pc  dwa_local_planner.pc  global_planner.pc  hunter_base.pc  hunter_bringup.pc  hunter_cartographer.pc  hunter_description.pc  hunter_local_planner.pc  hunter_move_base.pc  hunter_msgs.pc  hunter_navigation.pc  hunter_webots_sim.pc  map_msgs.pc  move_base.pc  move_base_msgs.pc  nav_core.pc  realsense2_camera.pc  realsense2_description.pc  ros_imu.pc  rslidar_driver.pc  rslidar_msgs.pc  rslidar_pointcloud.pc  rslidar_sdk.pc  rslidar_sync.pc  social_distance.pc  teb_local_planner.pc  ultrasonic_ros.pc  wrp_sdk.pc
Workspace/catkin_ws/devel/lib/rslidar_driver/: rslidar_node
Workspace/catkin_ws/devel/lib/rslidar_pointcloud/: cloud_node
Workspace/catkin_ws/devel/lib/rslidar_sdk/: rslidar_sdk_node
Workspace/catkin_ws/devel/lib/rslidar_sync/: rslidar_sync_2lidar_node  rslidar_sync_3lidar_node
Workspace/catkin_ws/devel/lib/teb_local_planner/: test_optim_node
Workspace/catkin_ws/devel/lib/ultrasonic_ros/: ultrasonic_ros_node
Workspace/catkin_ws/src/hunter_nav/: .gitignore  README.md
Workspace/catkin_ws/src/hunter_nav/hunter_navigation/: CMakeLists.txt  dwa_CMakeLists.txt  dwa_package.xml
Workspace/catkin_ws/src/navigation/hunter_local_planner/: CMakeLists.txt  hunter_local_planner_plugin.xml  package.xml
Workspace/catkin_ws/src/navigation/hunter_move_base/: CMakeLists.txt  package.xml
Workspace/catkin_ws/src/navigation/hunter_move_base/cfg/: MoveBase.cfg
Workspace/catkin_ws/src/navigation/hunter_move_base/include/hunter_move_base/: Obstacle.h  Obstacle_Line.h  Obstacle_Point.h  Obstacle_Polygon.h  distance_calculations.h  hunter_move_base.h  misc.h  pose_se2.h  visualization.h
Workspace/catkin_ws/src/navigation/hunter_move_base/src/: Obstacle_Line.cpp  Obstacle_Point.cpp  Obstacle_Polygon.cpp  hunter_move_base.cpp  hunter_move_base_node.cpp  visualization.cpp
Workspace/catkin_ws/src/rslidar_sdk/: CMakeLists.txt
Workspace/catkin_ws/src/rslidar_sdk/config/: config.yaml
Workspace/catkin_ws/src/rslidar_sdk/launch/: start.launch
Workspace/catkin_ws/src/rslidar_sdk/rviz/: rviz.rviz
Workspace/catkin_ws/src/social_distance/: CMakeLists.txt  mainpage.dox  package.xml
Workspace/catkin_ws/src/social_distance/launch/: launch.launch
Workspace/catkin_ws/src/social_distance/src/: social_distance_node.cpp  social_distance_node.cpp.bak
Workspace/catkin_ws/src/ultrasonic_ros/: CMakeLists.txt
Workspace/catkin_ws/src/ultrasonic_ros/launch/: ultrasonic.launch
Workspace/catkin_ws/src/ultrasonic_ros/src/: ultrasonic_ros.cpp  ultrasonic_ros_node.cpp  w200d_ultrasonic.cpp
Workspace/catkin_ws/src/wrp_sdk/: CMakeLists.txt
Workspace/maps/: map_rrc.pgm  map_rrc.yaml  mymap.yaml  sciencepark.pgm  sciencepark.yaml
Workspace/ros2_ws/install/: local_setup.sh  setup.sh
Workspace/ros2_ws/log/: latest_build  latest_list
Workspace/ros2_ws/src/hunter_ros/hunter_base/: CMakeLists.txt  package.xml
Workspace/ros2_ws/src/hunter_ros/hunter_base/ascent/: CMakeLists.txt
Workspace/ros2_ws/src/hunter_ros/hunter_base/include/hunter_base/: hunter_base_ros.hpp  hunter_messenger.hpp
Workspace/ros2_ws/src/hunter_ros/hunter_base/src/: hunter_base_node.cpp  hunter_base_node.cpp.bak  hunter_base_ros.cpp  hunter_messenger.cpp  hunter_status_node.cpp
Workspace/ros2_ws/src/hunter_ros/hunter_description/: CMakeLists.txt  package.xml
Workspace/ros2_ws/src/hunter_ros/hunter_description/launch/: hunter_base_description.launch.py
Workspace/ros2_ws/src/hunter_ros/hunter_msgs/: CMakeLists.txt  package.xml
Workspace/ros2_ws/src/wrp_sdk/: CMakeLists.txt  package.xml
Workspace/slam_ws/devel/: .catkin  .rosinstall  local_setup.sh
Workspace/slam_ws/devel/include/voxblox/: Block.pb.h
Workspace/slam_ws/devel/lib/: libgflags.so.2.2.1  libgflags_nothreads.so.2.2.1
Workspace/slam_ws/devel/lib/loam_velodyne/: laserMapping  laserOdometry  multiScanRegistration  transformMaintenance
Workspace/slam_ws/devel/lib/pkgconfig/: aloam_velodyne.pc  catkin_simple.pc  dense_scene.pc  eigen_catkin.pc  eigen_checks.pc  gflags_catkin.pc  glog_catkin.pc  loam_velodyne.pc  minkindr.pc  minkindr_conversions.pc  protobuf_catkin.pc  voxblox.pc  voxblox_msgs.pc  voxblox_ros.pc  voxblox_rviz_plugin.pc
Workspace/slam_ws/devel/lib/voxblox/: test_load_esdf  tsdf_to_esdf
Workspace/slam_ws/src/: .rosinstall
Workspace/slam_ws/src/dense_scene/: CMakeLists.txt
Workspace/slam_ws/src/dense_scene/launch/: dense_scene.launch
Workspace/slam_ws/src/dense_scene/src/: dense_scene.cpp
(+287 files in other folders)
