<?xml version="1.0"?>
<package format="3">
  <name>hunter_base</name>
  <version>0.0.0</version>
  <description>The hunter_base package</description>
  <maintainer email="yanxin001@e.ntu.edu.sg">zyx</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  
  <depend>hunter_msgs</depend>
  <depend>wrp_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
