<?xml version="1.0"?>
<package format="2">
  <name>hunter_description</name>
  <version>0.0.0</version>
  <description>The hunter_description package</description>
  <maintainer email="yanxin001@e.ntu.edu.sg">zyx</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <build_type>ament_cmake</build_type>
  </export>
</package>
