<?xml version="1.0"?>
<package format="3">
  <name>hunter_msgs</name>
  <version>0.0.0</version>
  <description>The hunter_msgs package</description>

  <maintainer email="yanxin001@e.ntu.edu.sg">zyx</maintainer>
  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
